--- a/vercel.json
+++ b/vercel.json
@@ -17,6 +17,10 @@
     ],
     "rewrites": [
         {
+            "source": "/(css|js|images|storage|build|assets)/(.*)",
+            "destination": "/public/$1/$2"
+        },
+        {
             "source": "/(.*)",
             "destination": "/api/index.php"
         }
@@ -25,13 +29,6 @@
         "APP_ENV": "production",
         "APP_DEBUG": "true",
         "APP_URL": "https://zona-be-pad.vercel.app",
-        "APP_CONFIG_CACHE": "/tmp/config.php",
-        "APP_EVENTS_CACHE": "/tmp/events.php",
-        "APP_PACKAGES_CACHE": "/tmp/packages.php",
-        "APP_ROUTES_CACHE": "/tmp/routes.php",
-        "APP_SERVICES_CACHE": "/tmp/services.php",
-        "VIEW_COMPILED_PATH": "/tmp",
-        "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
         "SESSION_DRIVER": "cookie"
     }
