--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 2,
     "framework": null,
     "functions": {
-        "api/index.php": { "runtime": "vercel-php@0.7.2" }
+        "public/index.php": { "runtime": "vercel-php@0.7.2" }
     },
     "headers": [
         {
@@ -22,7 +22,7 @@
         },
         {
             "source": "/(.*)",
-            "destination": "/api/index.php"
+            "destination": "/public/index.php"
         }
     ],
     "env": {
