--- a/vercel.json
+++ b/vercel.json
@@ -31,7 +31,7 @@
         "APP_URL": "https://zona-be-pad.vercel.app",
         "LOG_CHANNEL": "stderr",
         "VIEW_COMPILED_PATH": "/tmp",
-        "CACHE_DRIVER": "array",
-        "SESSION_DRIVER": "cookie"
+        "SESSION_DRIVER": "cookie",
+        "CACHE_DRIVER": "array"
     }
 }
