--- a/vercel.json
+++ b/vercel.json
@@ -17,5 +17,14 @@
   ],
   "rewrites": [
     { "source": "/(.*)", "destination": "/api/index.php" }
-  ]
+  ],
+  "env": {
+    "APP_ENV": "production",
+    "APP_DEBUG": "true",
+    "LOG_CHANNEL": "stderr",
+    "LOG_LEVEL": "debug",
+    "VIEW_COMPILED_PATH": "/tmp",
+    "SESSION_DRIVER": "cookie",
+    "CACHE_DRIVER": "array"
+  }
 }
